--- a/survey.html
+++ b/survey.html
@@ -4,7 +4,7 @@
 	<ul>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Complitely boring!">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Complitely boring!">
 				<div class="item-inner">
 					<div class="item-title">Complitely boring!</div>
 				</div>
@@ -12,7 +12,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Somehow boring<">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Somehow boring<">
 				<div class="item-inner">
 					<div class="item-title">Somehow boring</div>
 				</div>
@@ -20,7 +20,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Plain, routin">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Plain, routin">
 				<div class="item-inner">
 					<div class="item-title">Plain, routin</div>
 				</div>
@@ -28,7 +28,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Some were interesting">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Some were interesting">
 				<div class="item-inner">
 					<div class="item-title">Some were interesting</div>
 				</div>
@@ -36,7 +36,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Tasks are interesting">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Tasks are interesting">
 				<div class="item-inner">
 					<div class="item-title">Tasks are interesting</div>
 				</div>
@@ -44,7 +44,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_interest" value="Super exciting tasks!">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Super exciting tasks!">
 				<div class="item-inner">
 					<div class="item-title">Super exciting tasks!</div>
 				</div>
@@ -58,7 +58,7 @@
 	<ul>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_reward_problems_existed" value="No">
+				<input type="radio" name="dataitem_{{item.id}}_reward_problems_existed" value="No">
 				<div class="item-inner">
 					<div class="item-title">No</div>
 				</div>
@@ -66,7 +66,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_reward_problems_existed" value="Yes">
+				<input type="radio" name="dataitem_{{item.id}}_reward_problems_existed" value="Yes">
 				<div class="item-inner">
 					<div class="item-title">Yes</div>
 				</div>
@@ -83,7 +83,7 @@
 			<div class="item-content">
 				<div class="item-inner">
 					<div class="item-input">
-						<textarea name="cafe_reward_problems_description"></textarea>
+						<textarea name="dataitem_{{item.id}}_reward_problems_description"></textarea>
 					</div>
 				</div>
 			</div>
@@ -95,7 +95,7 @@
 	<ul>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_continue_work" value="No">
+				<input type="radio" name="dataitem_{{item.id}}_continue_work" value="No">
 				<div class="item-inner">
 					<div class="item-title">No</div>
 				</div>
@@ -103,7 +103,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="cafe_continue_work" value="Yes">
+				<input type="radio" name="dataitem_{{item.id}}_continue_work" value="Yes">
 				<div class="item-inner">
 					<div class="item-title">Yes</div>
 				</div>
@@ -119,7 +119,7 @@
 				<div class="item-inner">
 					<div class="item-title label">Hours/week</div>
 					<div class="item-input">
-						<input type="text" name="cafe_how_many_hours" placeholder="hours a week (0.0 - 40)">
+						<input type="text" name="dataitem_{{item.id}}_how_many_hours" placeholder="hours a week (0.0 - 40)">
 					</div>
 				</div>
 			</div>
@@ -138,7 +138,7 @@
 					<div class="item-title label">I allow</div>
 					<div class="item-input">
 						<label class="label-switch">
-							<input type="checkbox" name="cafe_privacy" value="Yes">
+							<input type="checkbox" name="dataitem_{{item.id}}_privacy" value="Yes">
 						</label>
 					</div>
 				</div>
