--- a/survey.html
+++ b/survey.html
@@ -12,7 +12,7 @@
 		</li>
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="dataitem_{{item.id}}_interest" value="Somehow boring<">
+				<input type="radio" name="dataitem_{{item.id}}_interest" value="Somehow boring">
 				<div class="item-inner">
 					<div class="item-title">Somehow boring</div>
 				</div>
