--- a/instagram_tags.html
+++ b/instagram_tags.html
@@ -6,13 +6,13 @@
 			<div class="item-content">
 				<div class="item-inner">
 					<div class="item-input">
-						<input type="text" name = "dataitem_{{item.id}}_tags" placeholder = "tag1, tag2, tag3, tag4, tag5">
+						<input type="text" name = "dataitem_{{item.id}}_tags" placeholder = "tag1, tag2, tag3 ...">
 					</div>
 				</div>
 			</div>
 			<div class="item-content">
 				<div class="item-inner">
-					<div class="item-title">Image can be used to describe Trento</div>
+					<div class="item-title">Image describes Trento</div>
 					<div class="">
 						<label class="label-switch">
 							<input type="checkbox" name = "dataitem_{{item.id}}_to_describe_trento" value="yes">
