--- a/entityrelationship_check.html
+++ b/entityrelationship_check.html
@@ -1,7 +1,7 @@
 <div class="list-block hide-if-empty">
 	<div class="list-group">
 		<ul>
-			<li class="list-group-title"><b>{{forloop.counter}}. Please read the text:</b><br/>{{item.value.sentence}}<br/> answer the questions by swiping from right to left: </li>
+			<li class="list-group-title"><b>{{forloop.counter}}. Please read the sentence:</b><br/>{{item.value.sentence}}<br/> <b>Answer the questions by swiping from right to left:</b> </li>
 			<li class="swipeout dataitem question notanswered" instance-id="{{item.id}}">
 
 				<input type = 'hidden' name='dataitem_{{item.id}}_relationship_is_correct' class='dataitem_answer'>
