--- a/entityrelationship_check.html
+++ b/entityrelationship_check.html
@@ -38,7 +38,7 @@
 				<div class="swipeout-content item-content">
 					<div class="item-media"><i class="fa fa-question-circle"></i></div>
 					<div class="item-inner">
-						<div class="item-text">Is there any other relation between the words in the sentence?</div>
+						<div class="item-text">Is there any other relation between the words ({{item.value.name1}} and {{item.value.name2}}) in the sentence?</div>
 
 					</div>
 				</div>
