--- a/entityrelationship_check.html
+++ b/entityrelationship_check.html
@@ -13,6 +13,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="yes">I dont know</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="no">No</a>
 					</div>
@@ -30,22 +31,6 @@
 					<div class="swipeout-actions-inner">
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_sentence_messy]" answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_sentence_messy]" answer="no">No</a>
-					</div>
-				</div>
-			</li>
-			<li class="swipeout dataitem question notanswered" instance-id="{{item.id}}">
-				<input type = 'hidden' name='dataitem_{{item.id}}_other_relationships' class='dataitem_answer'>
-				<div class="swipeout-content item-content">
-					<div class="item-media"><i class="fa fa-question-circle"></i></div>
-					<div class="item-inner">
-						<div class="item-text">Is there any other relation between the words ({{item.value.name1}} and {{item.value.name2}}) in the sentence?</div>
-
-					</div>
-				</div>
-				<div class="swipeout-actions">
-					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_other_relationships]" answer="yes">Yes</a>
-						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_other_relationships]" answer="no">No</a>
 					</div>
 				</div>
 			</li>
