--- a/instagram_tags.html
+++ b/instagram_tags.html
@@ -2,7 +2,7 @@
 	<div class="content-block-inner">
 		<div class="item-title label">Image {{forloop.counter}}</div>
 		<div class='media-picture'>
-			<img src="{{item.value.images.low_resolution.url}}">
+			<img src="{{item.value.image_url}}">
 			<div class="item-content">
 				<div class="item-inner">
 					<div class="item-input">
@@ -22,4 +22,3 @@
 			</div>
 		</div>
 	</div>
-</div>
