--- a/entityrelationship_check.html
+++ b/entityrelationship_check.html
@@ -32,7 +32,7 @@
 				<div class="swipeout-content item-content">
 					<div class="item-media"><i class="fa fa-question-circle"></i></div>
 					<div class="item-inner">
-						<div class="item-text">Does this text include only 1 clear understandable sentence (after an optional list of tags)?</div>
+						<div class="item-text">Does this text include only 1 clear understandable sentence?</div>
 					</div>
 				</div>
 				<div class="swipeout-actions">
