--- a/entityrelationship_check.html
+++ b/entityrelationship_check.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="yes">I dont know</a>
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="I dont know">I dont know</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_relationship_is_correct]"  answer="no">No</a>
 					</div>
