--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="Heard something">Heard something <br/> about it</a>
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="Heard something">heard<br/> about it</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="no">No</a>
 					</div>
@@ -293,7 +293,7 @@
 				<div class="item-content">
 					<div class="item-media"><i class="fa fa-question-circle"></i></div>
 					<div class="item-inner">
-						<div class="item-text item-input">Please rate your overall experience of using CrowdCafe from your smartphone:
+						<div class="item-text item-input">Please rate your overall experience of using CrowdCafe from your smartphone:<br/> -3 very negative; +3 very positive 
 							<div class="range-slider">
 								<input type = "range" name = "dataitem_{{item.id}}_platform_1" value-to-text=".text_{{item.id}}_platform_1" min="-3" max="3" value="0" step="1">	
 								<b><p class="text_{{item.id}}_platform_1 center">0</p></b>
