--- a/survey.html
+++ b/survey.html
@@ -326,7 +326,7 @@
 					<div class="item-inner">
 						<div class="item-text item-input">Please write what you <b>liked</b> most about the platform?
 							<div class="item-input">
-								<input type="text" name = "dataitem_{{item.id}}_platform_3" placeholder = "I liked ...." value = "">
+								<input type="text" name = "dataitem_{{item.id}}_platform_3" placeholder = "I liked ...." value = "I liked ... ">
 							</div>
 						</div>
 					</div>
@@ -339,7 +339,7 @@
 					<div class="item-inner">
 						<div class="item-text item-input">Please write what you <b>disliked</b> most about the platform?
 							<div class="item-input">
-								<input type="text" name = "dataitem_{{item.id}}_platform_4" placeholder = "I did not like ...." value = "">
+								<input type="text" name = "dataitem_{{item.id}}_platform_4" placeholder = "I did not like ...." value = "I did not like ....">
 							</div>
 						</div>
 					</div>
@@ -352,7 +352,7 @@
 					<div class="item-inner">
 						<div class="item-text item-input">Any additional feedback:
 							<div class="item-input">
-								<input type="text" name = "dataitem_{{item.id}}_feedback" placeholder = "your feedback" value = "">
+								<input type="text" name = "dataitem_{{item.id}}_feedback" placeholder = "your feedback" value = "feedback">
 							</div>
 						</div>
 					</div>
