--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="Heard something">heard<br/> about it</a>
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="heard something">heard<br/> about it</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_1]"  answer="no">No</a>
 					</div>
@@ -38,7 +38,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_2]"  answer="No idea">No idea what<br/> it is</a>
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_2]"  answer="no idea">No idea what<br/> it is</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_2]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_2]"  answer="no">No</a>
 					</div>
@@ -55,7 +55,7 @@
 				</div>
 				<div class="swipeout-actions">
 					<div class="swipeout-actions-inner">
-						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_3]"  answer="No idea">No idea what<br/> it is</a>
+						<a href="#" class="demo-actions neutral swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_3]"  answer="no idea">No idea what<br/> it is</a>
 						<a href="#" class="demo-actions positive swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_3]"  answer="yes">Yes</a>
 						<a href="#" class="demo-actions negative swipeout-delete" answer-to="[name=dataitem_{{item.id}}_initial_knowledge_3]"  answer="no">No</a>
 					</div>
