--- a/form_elements/range.html
+++ b/form_elements/range.html
@@ -5,7 +5,7 @@
 			<div class="item-text item-input">Please rate your overall experience of using CrowdCafe from your smartphone:
 				<div class="range-slider">
 					<input type = "range" name = "dataitem_{{item.id}}_platform_1" value-to-text=".text_{{item.id}}_platform_1" min="-3" max="3" value="0" step="1">	
-					<b><p class="text_{{item.id}}_platform_1 center">?</p></b>
+					<b><p class="text_{{item.id}}_platform_1 center">0</p></b>
 				</div>
 			</div>
 		</div>
