--- a/instagram_tags.html
+++ b/instagram_tags.html
@@ -12,10 +12,10 @@
 			</div>
 			<div class="item-content">
 				<div class="item-inner">
-					<div class="item-title">Image describes Trento</div>
+					<div class="item-title">Image describes the city</div>
 					<div class="">
 						<label class="label-switch">
-							<input type="checkbox" name = "dataitem_{{item.id}}_to_describe_trento" value="yes">
+							<input type="checkbox" name = "dataitem_{{item.id}}_to_describe_city" value="yes">
 						</label>
 					</div>
 				</div>
