--- a/comelong.html
+++ b/comelong.html
@@ -3,7 +3,7 @@
 		<li class="swipeout dataitem question notanswered" instance-id="{{item.id}}">
 			<input type = 'hidden' name='dataitem_{{item.id}}_rating' class='dataitem_answer'>
 			<div class="swipeout-content item-content">
-				<div class="item-media"><img src='{{item.value.picture}}' width="100"></div>
+				<!--div class="item-media"><img src='{{item.value.picture}}' width="100"></div-->
 				<div class="item-inner">
 					<div class="item-title-row">
 						<div class="item-title"><a href='#' data-popup=".popup_{{item.id}}" photobrowser-images ="{{item.value.picture}},%%*{{item.value.picture}}" photobrowser-splitter =",%%*" >#{{forloop.counter}} {{item.value.name}}</a>
