--- a/comelong.html
+++ b/comelong.html
@@ -6,7 +6,7 @@
 				<!--div class="item-media"><img src='{{item.value.picture}}' width="100"></div-->
 				<div class="item-inner">
 					<div class="item-title-row">
-						<div class="item-title"><a href='#' data-popup=".popup_{{item.id}}" photobrowser-images ="{{item.value.picture}},%%*{{item.value.picture}}" photobrowser-splitter =",%%*" >#{{forloop.counter}} {{item.value.name}}</a>
+						<div class="item-title"><a href='#' data-popup=".popup_{{item.id}}" photobrowser-images ="{{item.value.picture}},%%*{{item.value.picture}}" photobrowser-splitter =",%%*" >#{{item.value.place_id}} {{item.value.name}}</a>
 						</div>
 					</div>
 					<div class="item-subtitle">{{item.value.street}}</div>
