--- a/comelong.html
+++ b/comelong.html
@@ -6,11 +6,12 @@
 				<!--div class="item-media"><img src='{{item.value.picture}}' width="100"></div-->
 				<div class="item-inner">
 					<div class="item-title-row">
-						<div class="item-title"><a href='#' data-popup=".popup_{{item.id}}" photobrowser-images ="{{item.value.picture}},%%*{{item.value.picture}}" photobrowser-splitter =",%%*" >#{{item.value.place_id}} {{item.value.name}}</a>
+						<div class="item-title"><a href='#' data-popup=".popup_{{item.id}}" photobrowser-images ="{{item.value.picture}},%%*{{item.value.picture}}" photobrowser-splitter =",%%*" >{{item.value.name}}</a>
 						</div>
 					</div>
 					<div class="item-subtitle">{{item.value.street}}</div>
 					<div class="item-text">
+						{{item.value.place_id}}
 						<!--img src="http://maps.googleapis.com/maps/api/staticmap?center={{item.value.latitude}},{{item.value.longitude}}&amp;zoom=16&amp;markers=color:red%7C{{item.value.latitude}},{{item.value.longitude}}&amp;size=320x320&amp;language=italian&amp;sensor=false" class="img-responsive"-->
 					</div>
 				</div>
