--- a/image_categorization.html
+++ b/image_categorization.html
@@ -14,7 +14,7 @@
 			</li>
 			<li>
 				<label class="label-radio item-content">
-					<input type="radio" name="dataitem_{{item.id}}_category" value="crowd of people">
+					<input type="radio" name="dataitem_{{item.id}}_category" value="crowd">
 					<div class="item-inner">
 						<div class="item-title">crowd of people</div>
 					</div>
@@ -22,7 +22,7 @@
 			</li>
 			<li>
 				<label class="label-radio item-content">
-					<input type="radio" name="dataitem_{{item.id}}_category" value="action moment">
+					<input type="radio" name="dataitem_{{item.id}}_category" value="action">
 					<div class="item-inner">
 						<div class="item-title">action moment</div>
 					</div>
@@ -49,6 +49,14 @@
 					<input type="radio" name="dataitem_{{item.id}}_category" value="other">
 					<div class="item-inner">
 						<div class="item-title">other</div>
+					</div>
+				</label>
+			</li>
+			<li>
+				<label class="label-radio item-content">
+					<input type="radio" name="dataitem_{{item.id}}_category" value="notavailable">
+					<div class="item-inner">
+						<div class="item-title">image is not available</div>
 					</div>
 				</label>
 			</li>
