--- a/shapes.html
+++ b/shapes.html
@@ -2,7 +2,7 @@
 	<div class="content-block-inner">
 		<div class="item-title label">Image {{forloop.counter}}</div>
 		<div class='media-picture'>
-			<img src="{{item.value.image_url}}" id = "image_{{item.id}}" annotation-type="shapes" annotation-name="canvas_{{item.id}}">
+			<img src="{{item.value.image_url}}" id = "image_{{item.id}}" annotation-type="shapes" annotation-name="dataitem_{{item.id}}_shape">
 			<div class="item-content">
 
 				<div class="item-inner">
