--- a/rockpearl_task1.html
+++ b/rockpearl_task1.html
@@ -2,7 +2,7 @@
 	<div class="content-block-inner">
 		<div class="item-title label">Image {{forloop.counter}}</div>
 		<div class='media-picture'>
-			<img src="{{item.value.origin_url}}" id = "image_{{item.id}}" annotation="shapes" annotation-type="rectangle" annotation-name="dataitem_{{item.id}}_shapes">
+			<img src="{{item.value.url}}" id = "image_{{item.id}}" annotation="shapes" annotation-type="rectangle" annotation-name="dataitem_{{item.id}}_shapes">
 			<div class='raphael'></div>
 			<div class='row'>
 				<div class="col-66">_</div> <div class="col-33"><a href="#" class="button button-round button-cancel"><i class="fa fa-reply"></i></a></div>
