--- a/shapes.html
+++ b/shapes.html
@@ -2,17 +2,10 @@
 	<div class="content-block-inner">
 		<div class="item-title label">Image {{forloop.counter}}</div>
 		<div class='media-picture'>
-			<img src="{{item.value.image_url}}" id = "image_{{item.id}}" annotation="shapes" annotation-type="rectangle" annotation-name="dataitem_{{item.id}}_shapes">
+			<img src="{{item.value.image_url}}" id = "image_{{item.id}}" annotation="shapes" min-shapes="1" max-shapes="1" annotation-type="rectangle" annotation-name="dataitem_{{item.id}}_shapes">
 			<div class='raphael'></div>
 			<div class='row'>
 				<div class="col-66">_</div> <div class="col-33"><a href="#" class="button button-round button-cancel"><i class="fa fa-reply"></i></a></div>
-			</div>
-			<div class="item-content">
-				<div class="item-inner">
-					<div class="item-input">
-						<input type="text" name = "dataitem_{{item.id}}_tags" placeholder = "tag1, tag2, tag3 ...">
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
