--- a/image_shape_object.html
+++ b/image_shape_object.html
@@ -1,7 +1,7 @@
 <div class="list-block content-block">
 	<div class="content-block-inner">
 		<div class='media-picture'>
-			<img src="{{item.value.url}}-/resize/600x/" id = "image_{{item.id}}" annotation="shapes" min-shapes="1" max-shapes="1" annotation-type="path" annotation-name="dataitem_{{item.id}}_shapes">
+			<img src="{{item.value.url}}-/resize/600x/" id = "image_{{item.id}}" annotation="shapes" min-shapes="1" max-shapes="1" annotation-type="rectangle" annotation-name="dataitem_{{item.id}}_shapes">
 			<canvas id="canvas_{{item.id}}"></canvas>
 			<div class='row'>
 				<div class="col-66">_</div> <div class="col-33"><a href="#" class="button button-round button-cancel"><i class="fa fa-reply"></i></a></div>
