--- a/image_shape_object.html
+++ b/image_shape_object.html
@@ -3,7 +3,9 @@
 		<div class='media-picture'>
 			<canvas src="{{item.value.url}}-/resize/600x/" id="canvas_{{item.id}}" annotation="shapes" min-shapes="1" max-shapes="1" annotation-type="polygon" annotation-name="dataitem_{{item.id}}_shapes"></canvas>
 			<div class='row'>
-				<div class="col-66">_</div> <div class="col-33"><a href="#" class="button button-round button-cancel"><i class="fa fa-reply"></i></a></div>
+				<div class="col-33"><a href="#" class="button button-round shape-start">Start drawing</i></a></div>
+				<div class="col-33"><a href="#" class="button button-round shape-finish">Finish drawing</a></div>
+				<div class="col-33"><a href="#" class="button button-round shape-remove"><i class="fa fa-reply"></i></a></div>
 			</div>
 		</div>
 	</div>
